# flappybird

./: .gitignore  CMakeLists.txt  README.md  build.sh  makefile
include/: bird.h  extras.h  game.h  loadHS.h  loadSounds.h  walls.h
src/: bird.cpp  game.cpp  main.cpp  walls.cpp
